<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFolders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/adapter_item_folder" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutContentLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressWheel"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:theme="@style/AppCompatAlertDialogStyle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewProgressMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:text="@string/loading_photos"
            android:textColor="@color/theme_color_2"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/allowAccessFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/galleryIllusTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/permission_title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/galleryIllusContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/require_permission"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/allowAccessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/allow_access"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>