<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWindowBackground"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:minHeight="56dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMedia"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:elevation="2dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/done">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/albumselection"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center_vertical|start"
                        android:maxLines="1"
                        android:textColor="#605160"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/albumselectionCount"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="(0/5)"
                        android:textColor="#605160"
                        android:textSize="18sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/albumselection"
                        app:layout_constraintTop_toTopOf="parent" />

                    <FrameLayout
                        android:id="@+id/dropdownframe"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/albumselection"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/dropdown"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_dropdown_rotate" />
                    </FrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/selector_gallery_done"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/done"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:textAllCaps="true" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.mediagallery.hashone.fastScroll.ScrollFastRecyclerLib
        android:id="@+id/imageGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="1dp"
        app:fastScrollPopupBackgroundSize="30dp"
        app:fastScrollPopupBgColor="#2962ff"
        app:fastScrollPopupTextColor="#ffffff"
        app:fastScrollPopupTextSize="12dp"
        app:fastScrollThumbColor="#2962ff" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumsrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true" />

    <FrameLayout
        android:id="@+id/allowAccessFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/galleryIllusTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/permission_title"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/galleryIllusContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/require_permission"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/allowAccessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/allow_access"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>
    <ProgressBar
        android:id="@+id/progressBarGalleryPhotos"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppCompatAlertDialogStyle1"
        android:visibility="gone"
        android:layout_centerInParent="true" />
</RelativeLayout>